[package]
name = "transaction-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", optional = true, features = ["derive"] }


[features]
default = ["std"]
std = [
    "serde/std",
]