[package]
name = "transaction-processor"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	".",
]

[dependencies]
futures = "0.3.21"
once_cell = "1.10.0"
futures-util = "0.3.21"
async-stream = "0.3.3"
csv = "1.1.6"
serde = { version = "1.0.142", optional = true, features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }

[features]
default = ["std"]
std = [
    "serde/std",
]

